fix faq content alignment

--- a/src/components/Faq/style.css
+++ b/src/components/Faq/style.css
@@ -6,7 +6,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border-bottom: 5px solid black;
+}
+
+.faq-section-heading {
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .faq-question {
